<resources>
    <string name="app_name">BaseProject</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="notification_channel_id">channel</string>
    <string name="notification_title">time</string>
    <string name="start_time">start_time</string>
    <string name="scan_now">Scan Now</string>
    <string name="location_details">location details -</string>
    <string name="location_id">location id -</string>
    <string name="price">Price -</string>
    <string name="session_start_time">Session Start time -</string>
    <string name="duration">Duration -</string>
    <string name="amount">Amount -</string>
</resources>