<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <Button
        android:id="@+id/scan_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="148dp"
        android:text="@string/scan_now"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/locationdetails"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/location_details" />

    <TextView
        android:id="@+id/locationid"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locationdetails"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/location_id" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/locationid"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/price" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/price"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/session_start_time" />

    <TextView
        android:id="@+id/duration"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/duration" />


    <TextView
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/duration"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/amount" />

</androidx.constraintlayout.widget.ConstraintLayout>